--- a/moreStep2ov1.html
+++ b/moreStep2ov1.html
@@ -6,13 +6,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">When we ask people experiencing homelessness how many times they need to be “sighted”, the answers vary from three to five to eight, even up to 20.</p>
 			<ul class="quotes">
 				<li>Wusinich, C., Bond, L., Nathanson, A., & Padgett, D. K. (under review). “If you're gonna help me, help me”: Barriers to housing among unsheltered homeless adults.</li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>"People experiencing homelessness tell us they feel that the “sightings” process is one of the most frustrating and senseless barriers they need to work through. They feel bewildered that they would need to prove they are homeless when they feel that it’s obvious, especially when oftentimes they have had to go days without a meal or a shower. They also become frustrated when they have to repeatedly share their name and date of birth without any indication that they will receive the type of support they are asking for.</p>
 
 			<p>The “sightings” process was designed to verify people are in fact street homeless before offering them a case manager. Because of this, the “sightings” process needs to happen “randomly” over several weeks rather than on consecutive nights. These sightings need to happen at random, usually at night while a person is bedded down. People tell us that if they move locations during this “sightings” process, they have to start all over again from their new location. When we ask people experiencing homelessness how many times they need to be “sighted”, the answers vary from three to five to eight, even up to 20. Confusion about the number of sightings required has been echoed in findings from a qualitative study conducted in 2017: street homeless individuals in various neighborhoods throughout Manhattan reported different understandings of the number of sightings as well as frustration with long, indeterminate waits between sightings. Providers tell us that the contractual number of “sightings” varies from three to five depending on the outreach organization.</p>
