--- a/moreStep2ov4.html
+++ b/moreStep2ov4.html
@@ -6,13 +6,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">A study conducted throughout Manhattan found that street homeless New Yorkers make decisions about where to sleep each night based on safety and weather-related concerns.</p>
 			<ul class="quotes">
 				<li>Wusinich, C., Bond, L., Nathanson, A., & Padgett, D. K. (under review). “If you're gonna help me, help me”: Barriers to housing among unsheltered homeless adults.</li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>Outreach teams focus their energy on areas where there are the most people. For some people, especially those living outside Manhattan, this means that engagements with outreach can be fewer and further between, despite the outreach teams’ best efforts to meet everyone. These folks are more likely to be sleeping somewhere that isn’t visible to outreach teams.</p>
 			<p>A study conducted throughout Manhattan found that street homeless New Yorkers make decisions about where to sleep each night based on safety and weather-related concerns. This study found that some individuals choose less populated areas; as one participant explained, “We try to be out of sight...It's better that way”. Additionally, in cold weather, many participants reported that they sleep on trains for warmth and relative safety. In these cases and in situations where participants sleep in a location that is different from their daytime location, they may not be discoverable or visible to outreach workers, and thus not sighted bedded down.</p>
 			<p>One challenge, especially for folks outside of regular outreach areas, is that they do not know how they can contact outreach teams. One option is 311, but people generally are not calling to complain about themselves, and 311 is not designed for people who are just looking to engage with outreach. Without a designated number for homeless people, many are left unsure of who they need to contact, let alone what steps they need to take.</p>
