--- a/moreStep2re2.html
+++ b/moreStep2re2.html
@@ -6,10 +6,10 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">People experiencing homelessness indicate that increased transparency would help them trust outreach workers.</p>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>We recommend that outreach teams be transparent with their clients, providing a realistic overview of their transitional and permanent housing options, including the length of time before those options may be available. People experiencing homelessness indicate that increased transparency would help them trust outreach workers. They tell us that right now, the feeling that outreach workers withhold information from them is frustrating and dehumanizing. They also share that they can feel stuck and unsure about how to proceed with working towards housing. We believe DHS-contracted outreach providers should, at the instruction of DHS, be as transparent as possible with its clients.</p>
 			<p>While we understand that no provider wants to be put in a position of having to go back on real or perceived commitments, we know that truth is valued and that honesty is necessary in building a trusting relationship with someone.</p>
 		</div>
