--- a/moreStep3re3.html
+++ b/moreStep3re3.html
@@ -6,10 +6,10 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">This will allow outreach teams to build relationships with providers, and ensure appropriate referrals and best-fit placements into these limited beds. </p>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>The faith community has long been part of providing services to those in need, and we recognize the importance of continuing these relationships. We recommend that the collaboration between the Emergency Shelter Network and Department of Homeless Services, including their contracted-providers, is expanded to include outreach programs and other points-of-contact for street homeless individuals. Additionally, we recommend that barriers to accessing these services be reduced in whatever way possible.
 			<p>We recommend a process which would allow outreach teams to directly refer street homeless individuals to respite beds in lieu of going through the referral process at a drop-in center. This process would be an option for street homeless individuals currently engaged and actively working with outreach teams; we envision that the outreach team would provide the psychosocial assessment and a referral with any additional necessary information. This type of referral would eliminate the need for individuals to access drop-in center services first, a possible barrier to accessing respite beds. Due to the changing availability and capacity of respite beds, we recommend that the expansion to outreach teams start with a collaboration with a few select Respite programs. This will allow outreach teams to build relationships with providers, and ensure appropriate referrals and best-fit placements into these limited beds.</p>
 			<p>Secondly, we call on the Department of Homeless Services to create written referral and eligibility policies in collaboration with the Emergency Shelter Network. At present, there is limited written policy on the process of assessing and referring to respite beds. Our recommendation would not only increase transparency in the process of accessing services, but would ensure that providers are all providing the same information to Respite providers.</p>
