--- a/moreStep5ov1.html
+++ b/moreStep5ov1.html
@@ -6,13 +6,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium"> A social security card is needed to begin the process of applying for other necessary documents, including a birth certificate.</p>
 			<ul class="quotes">
 				<li>NYC Mayor's Office of Operations. (2017, November). NYC HOME-STAT Stakeholder research insights report: Documenting the journey from street to home January - May 2016. Retrieved July 27, 2018, from <a target="_blank" href="https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017">https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>Individuals must have a social security card to prove their identity and citizenship so that they may be eligible for many types of housing, including Section 8 and supportive housing. A person is required to at least have a copy of their social security card when applying for housing, and the original may be requested depending on program and housing type. This process can be difficult for a number of reasons. Some people may not know or may be unable to remember the information needed to obtain a new copy of their social security card, such as their social security number and/or mother’s maiden name. A social security card is needed to begin the process of applying for other necessary documents, including a birth certificate. If a person successfully applies for a new copy of their card, it can take anywhere from one to twelve weeks after submission to receive the card.</p>
 		</div>
 	</div>
