--- a/moreStep5ov5.html
+++ b/moreStep5ov5.html
@@ -6,13 +6,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<ul class="quotes">
 				<li>U.S. Department of Housing and Urban Development. (2018). HUD-VASH vouchers. Retrieved August 2, 2018, from <a target="_blank" href="https://www.hud.gov/program_offices/public_indian_housing/programs/hcv/vash">https://www.hud.gov/program_offices/public_indian_housing/programs/hcv/vash</a></li>
 				<li>NYC Mayor's Office of Operations. (2017, November). NYC HOME-STAT Stakeholder research insights report: Documenting the journey from street to home January - May 2016. Retrieved July 27, 2018, from <a target="_blank" href="https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017">https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>People who have served in the United States military may be eligible for services through the Veterans Administration, including access to the HUD-VASH program, a supportive housing program which combines a Housing Choice Voucher with supportive services provided by the Veterans Administration. Veterans must provide a copy of their DD-214 to be considered for this program.</p>
 		</div>
 	</div>
