--- a/moreStep5re2.html
+++ b/moreStep5re2.html
@@ -6,13 +6,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlights medium">We believe that this policy is of the utmost importance to uphold for individuals experiencing homelessness, particularly for individuals who are unable to provide documentation due to institutional barriers.</p>
 			<ul class="quotes">
 				<li>NYC Office of Policy, Procedures, and Training. (2016, January 8). Policy bulletin #16-04-OPE: Duty to assist applicants/participants. Retrieved from <a target="_blank" href="http://onlineresources.wnylc.net/nychra/docs/16-04-ope.pdf">http://onlineresources.wnylc.net/nychra/docs/16-04-ope.pdf</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>While we frequently speak to people struggling to secure their identification, we have never spoken to any street homeless New Yorkers who are aware of HRA’s “Duty to Assist” policy, which is a crucial policy which can help street homeless New Yorkers secure their identification.</p>
 			<p>The Department of Social Services/Human Resources Administration (DSS/HRA) mandates a “Duty to Assist” policy at Job Centers and Supplemental Nutrition Assistance Program (SNAP) Centers. Going to HRA to apply for benefits, including SNAP (food stamps) is often when people initially learn about the ID requirements needed throughout the housing process. This policy requires that staff members at these offices “assist the applicant/participant with obtaining the documentation” necessary to receive public benefits should the applicant be unable to provide them. Depending on the benefits for which they apply, people may need to provide documents to prove their identity, date of birth, social security number, citizenship status, and other identifying information. If the applicant does not have this information at the time of application, DSS/HRA employees are able to obtain this information from various systems in the event he/she has provided this information previously. </p>
 			<p>In the event that the appropriate documents are unable to be obtained using the aforementioned databases, DSS/HRA workers may accept “collateral contact”, a form of attestation from third party sources such as relatives, social service agencies, or other relevant individuals or organizations. Collateral contact allows these third-parties to verify the information necessary to receive benefits. </p>
