--- a/moreStep5re3.html
+++ b/moreStep5re3.html
@@ -6,13 +6,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlights medium">To decrease the likelihood that this would serve as a primary barrier in accessing services, including accepting Safe Haven placements, we recommend maintaining these higher benefit amounts even after placement into transitional housing. </p>
 			<ul class="quotes">
 				<li>NYC Mayor's Office of Operations. (2017, November). NYC HOME-STAT Stakeholder research insights report: Documenting the journey from street to home January - May 2016. Retrieved July 27, 2018, from <a target="_blank" href="https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017">https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>"We believe HRA should increase the amount of cash assistance provided to people in shelter and other transitional settings to better cover the cost of living and basic essentials. Unfortunately, although programs often try to (and are expected to) provide carfare to and from appointments, meals and snacks, and toiletries, these essentials are often not provided to individuals in transitional housing services. Furthermore, people in shelters have reported bathrooms being consistently out of toilet paper, and meals being simply inedible, necessitating the need for people to buy these items themselves.</p>
 			<p>The drastic decrease in benefits, usually from around $264 to $45 per month, that occurs when someone moves into a Safe Haven (or shelter) can be a deterrent for those already hesitant to move off of the streets. To decrease the likelihood that this would serve as a primary barrier in accessing services, including accepting Safe Haven placements, we recommend maintaining these higher benefit amounts even after placement into transitional housing.</p>
 			<p>At minimum, as with many of our recommendations, we recommend transparency, specifically about potential decrease in benefits after Safe Haven placements. Outreach programs should ensure staff have the knowledge and training to provide all of the information about potential changes in benefits to street homeless individuals considering Safe Haven placements, and allow the option for people to make informed decisions about their placement options.</p>
