--- a/moreStep6ov3.html
+++ b/moreStep6ov3.html
@@ -6,13 +6,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">It is concerning to us that outreach workers feel pressured to essentially manipulate diagnoses to help their clients get the best housing, but it is understable why this is the case under the current system.</p>
 			<ul class="quotes">
 				<li>See page 72: NYC Mayor's Office of Operations. (2017, November). NYC HOME-STAT Stakeholder research insights report: Documenting the journey from street to home January - May 2016. Retrieved July 27, 2018, from <a target="_blank" href="https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017">https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>Providers report that they feel pressured to get their clients the “best” type of housing. This often means supportive housing, which, more recently, has transitioned from already developed, scattered-site units in the community, into studio apartments located in provider-run buildings, usually referred to as congregate or single-site housing. These units typically are new developments and come with an array of amenities not offered in scattered-site units. We have spoken to outreach workers who have reported pushing for mental health and substance use diagnoses for their clients to make them eligible for supportive housing, as these units are typically both in greater supply and nicer than other units. Additionally, even the city has recognized that this occurs, writing.</p>
 			<p>“The availability of types of housing is also a key consideration for providers and clients when choosing types of housing. For instance, clients with a determination for NYNYIII Cat E (active sub use) are unlikely to receive that kind of housing, because the supply in NYC is very low. Providers will either try to get the determination changed to Cat A (SMI) or MICA, which has a higher supply of housing, or encourage those clients to go into genpop housing where they will not have all the supports in place that they may need to live independently.”</p>
 			<p>It is concerning to us that outreach workers feel pressured to essentially manipulate diagnoses to help their clients get the best housing, but it is understable why this is the case under the current system. While we feel that outreach case managers are meant to advocate for clients, we also recognize that clients should have the opportunity to receive housing that best fits their actual needs, not trumped up diagnoses in order to get housing as quick as possible.</p>
