--- a/moreStep6re3.html
+++ b/moreStep6re3.html
@@ -6,14 +6,14 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlights medium">Research has found that neighborhood, including being close to family and friends, are often top priorities for families leaving shelters, and our conversations with individuals experiencing street homelessness have alluded to the same thing: community and social supports are important in choosing permanent housing.</p>
 			<ul class="quotes">
 				<li>Goldfinger, S. M., & Schutt, R. K. (1996). Comparison of clinicians' housing recommendations and preferences of homeless mentally ill persons. Psychiatric Services.</li>
 				<li>Fisher, B. W., Mayberry, L. S., Shinn, M., & Khadduri, J. (2014). Leaving homelessness behind: Housing decisions among families exiting shelter. Housing Policy Debate, 24(2), 364-386.</li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>While providers may feel pressure to get their clients into any type of permanent housing as soon as possible, we recommend that this be a collaborative process which meets the needs of the individual. Historically, individuals have had the opportunity to state their preferences during the housing process, particularly in regards to location or unit type (e.g. studio, shared apartment). Despite this, people are often sent for housing interviews or to look at apartments/rooms wherever there is availability, not taking prior stated preferences into account. With limited housing available, providers toe a line between finding clients a place that best fits their needs while also understanding that better options may be difficult to come by.</p>
 			<p>We believe that choice in where you live is an important factor in promoting housing stability, connection to the community, and a human-centered housing process.</p>
 			<p>We recommend that providers accommodate individual preferences and allow for individuals to decline housing if units do not meet their needs, specifically in regards to borough. Research has found that neighborhood, including being close to family and friends, are often top priorities for families leaving shelters, and our conversations with individuals experiencing street homelessness have alluded to the same thing: community and social supports are important in choosing permanent housing. People want to feel comfortable and familiar in their neighborhoods and housing. </p>
