--- a/moreStep7ov2.html
+++ b/moreStep7ov2.html
@@ -6,7 +6,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">In New York, extremely low-income renters can afford less than 10% of available units, and very low and low-income renters can only afford approximately 17% and 40% of available units, respectively.</p>
 			<ul class="quotes">
 				<li>NYC Housing Preservation & Development. (2018). Affordability and area median income (AMI). Retrieved July 25, 2018, from <a target="_blank" href="https://www1.nyc.gov/site/hpd/renters/what-is-affordable-housing.page">https://www1.nyc.gov/site/hpd/renters/what-is-affordable-housing.page</a></li>
@@ -14,7 +14,7 @@
 				<li>NYC Housing. (2014). Housing New York: A five-borough, ten-year plan. Retrieved from <a target="_blank" href="https://www1.nyc.gov/assets/housing/downloads/pdf/housing_plan.pdf">https://www1.nyc.gov/assets/housing/downloads/pdf/housing_plan.pdf</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>In addition to few available supportive housing units, there continues to be a shortage of market rate apartments available to extremely low (defined as 30% or less of Area Median Income (AMI), which in 2018 was $21,930 for a one person household), very low (31-50% AMI; up to $36,550 for a one person household), and low income households (51-80% AMI; up to $58,480 for a one person household). While the voucher programs provide opportunities for households to locate and move into housing, there are many barriers in actually locating an available unit. For example, while agency Housing Specialists are tasked with assisting individuals in locating housing, they often are provided with outdated resources for contacting voucher-friendly landlords. In some cases, providers are not given any resources.</p>
 			<p>Adding to these barriers is the overall shortage of affordable units. In New York, extremely low-income renters can afford less than 10% of available units, and very low and low-income renters can only afford approximately 17% and 40% of available units, respectively. It is no secret that there is a lack of safe, affordable housing in New York City, making it hard for people to move out of shelters into permanent housing, including supportive units., There are many people vying for each unit of housing, which makes the process competitive.</p>
 		</div>
