--- a/moreStep7re5.html
+++ b/moreStep7re5.html
@@ -6,10 +6,10 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlights medium">Neighbors Together recommends increasing publicity of the Source of Income (SOI) Unit on the HRA website.</p>
 		</div>
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p><a target="_blank" href="https://neighborstogether.org/">Neighbors Together</a>, working alongside VOCAL-NY, and Partnership for the Homeless in the New York City Homeless Union (NYCHU), compiled a series of recommendations to increase the City’s effectiveness at fighting source of income discrimination, and shared them with Commissioner Banks at the Department of Social Services. All recommendations are summarized below.</p>
 			<p>- Neighbors Together recommends increasing publicity of the Source of Income (SOI) Unit on the HRA website. Currently, it is practically impossible to find contact information unless there has been direct outreach by the SOI unit staff. Since its inception in May 2017, the HRA Source of Income Discrimination unit has received approximately 100 calls, of which only some are reports of discrimination, and has filed litigation in only 2 cases. Compared to the City Commission on Human Rights’ (CCHR) 230 open cases in 2017, 100 calls and 2 open cases seems woefully insufficient given both the scope of the problem and the larger staffing capacity of HRA’s SOI unit. The unit at the City Commission on Human Rights, which litigates on behalf of complaints from individual New Yorkers, is overburdened with source of income discrimination reports, and has a smaller staff than the unit at HRA, so it seems reasonable that the HRA SOI Unit should increase their publicity in order to receive a more proportionate share of source of income discrimination complaints or leads. </p>
 			<p>- Neighbors Together recommends voucher recipients receive information on their legal rights as it pertains to source of income discrimination, and contact information for both the CCHR and the HRA’s SOI unit, upon receipt of their rental assistance voucher. </p>
