--- a/moreStep8re1.html
+++ b/moreStep8re1.html
@@ -6,7 +6,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlights medium">The new CityFHEPS vouchers could, if rolled out successfully and with the implementation of Intro-0146, be tremendously helpful to all homeless New Yorkers.</p>
 			<ul class="quotes">
 				<li>NYC Department of Homeless Services. (2017). Turning the tide on homelessness in New York City. Retrieved from <a target="_blank" href="https://www1.nyc.gov/assets/dhs/downloads/pdf/turning-the-tide-on-homelessness.pdf">https://www1.nyc.gov/assets/dhs/downloads/pdf/turning-the-tide-on-homelessness.pdf</a></li>
@@ -19,7 +19,7 @@
 				<li>See page 19: NYC Human Resources Administration. (2018, July). Notice of public hearing and opportunity to comment on proposed rule – CityFHEPS proposed rule. Retrieved from <a target="_blank" href="https://www1.nyc.gov/assets/hra/downloads/pdf/news/notices/2018/CITYFHEPS-NoticeofPublicHearingandOpportunitytoCommentonProposed Rule.pdf">https://www1.nyc.gov/assets/hra/downloads/pdf/news/notices/2018/CITYFHEPS-NoticeofPublicHearingandOpportunitytoCommentonProposed Rule.pdf</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>We support Council Member Levin’s Rental Assistance Vouchers bill (Int 0146-2018) to ensure that households currently receiving rental vouchers will continue to receive them as long as they remain eligible, and ensure that approved rental amounts raise in tandem with fair market rents. His legislation specifically states that there would be "no limit on the period of time during which an otherwise eligible household may receive a rental assistance voucher."</p>
 			<p>The multiple types of city-issued vouchers, including LINC, SEPS, and CityFEPS allowed 11,803 households to move from shelter into permanent housing between 2014 and 2016. Rental assistance programs, like these, have been shown to be associated with reduction of homelessness, and are preferred over less stable options, such as transitional housing or rapid re-housing. These programs have been vital in ending people’s experiences of homelessness and we know that continuing rental subsidies to households who have moved into permanent housing can assist these households in maintaining their housing. </p>
 			<p>Previous subsidy funding cuts, like the Advantage program, contributed to a 38% increase in homelessness in three years. This program, similar to LINC, was created in 2007, and provided subsidies to individuals who had been in shelter for more than 60 days and who were working at least 20 hours per week. Eligible participants paid 30-40% of their monthly income towards a market rate apartment. The Advantage program ended in 2011, resulting in many participants falling into rental arrears, unable to pay their full rent, leading to eviction and another episode of homelessness.</p>
