--- a/moreStep8re3.html
+++ b/moreStep8re3.html
@@ -6,7 +6,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlights medium">While we have heard that some programs do consistently provide aftercare, we recommend that this becomes protocol for all permanent housing placements. </p>
 			<ul class="quotes">
 				<li>NYC Mayor's Office of Operations. (2017, November). NYC HOME-STAT Stakeholder research insights report: Documenting the journey from street to home January - May 2016. Retrieved July 27, 2018, from <a target="_blank" href="https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017">https://www1.nyc.gov/assets/dhs/downloads/pdf/turning-the-tide-on-homelessness.pdf</a></li>
@@ -16,7 +16,7 @@
 				<li>Susser, E., Valencia, E., Conover, S., Felix, A., Tsai, W. Y., & Wyatt, R. J. (1997). Preventing recurrent homelessness among mentally ill men: a" critical time" intervention after discharge from a shelter. American Journal of Public Health, 87(2), 256-262.</li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>We also recommend providing aftercare services for all individuals placed into permanent housing. The transition into permanent housing can be a big change, especially for those who have spent years living in facilities surrounded by other people. While we have heard that some programs do consistently provide aftercare, we recommend that this becomes protocol for all permanent housing placements. </p>
 			<p>Navigating the demands of supportive housing or the bureaucratic voucher process, even once housed, can be difficult. We recommend that outreach workers continue to provide supportive counseling and case management services until individuals are successfully, stably housed. Moving is a stressful process for anyone, and organizing a move requires many steps that are especially difficult for those who are medically unstable, lack transportation to services, or may not be informed of the HRA process. Outreach workers should assist individuals in tasks such as updating their address information with the necessary entities (HRA, Social Security Administration, SNAP office, USPS), setting up utilities, navigating options for moving things out of storage, and providing resources on their new neighborhoods including local transportation, soup kitchens/food pantries, and nearby emergency services. Aftercare services can also be instrumental in helping individuals maintain housing during periods of lease renewal and voucher recertification.</p>
 			<p>Included in aftercare services should be a focus on connecting to healthcare. Many people who we have spoken to state that the first thing they intend on doing once they’re housed is to seek medical care. Connecting to healthcare providers in the community can present as a challenge, particularly for those who have not received medical care in years due to chronic episodes of homelessness. We recommend that outreach workers assist individuals in locating providers in their communities, scheduling initial appointments, and setting up transportation if applicable via Access-a-Ride or Medicaid Transportation. For those with complex health issues and those experiencing significant anxiety about seeking healthcare for the first time in many years, we advocate that case managers accompany individuals to initial health appointments to help alleviate anxiety and coordinate additional healthcare referrals.</p>
