--- a/moreStep1ov6.html
+++ b/moreStep1ov6.html
@@ -6,7 +6,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">We have spoken with individuals who feel that they were inappropriately assigned to substance use or mental health shelters, which in turn has made it difficult to maintain sobriety and/or has exacerbated mental health symptoms. </p>
 			<ul class="quotes">
 				<li>Angermeyer, M. C., & Matschinger, H. (2003). The stigma of mental illness: Effects of labelling on public attitudes towards people with mental disorder. Acta Psychiatrica Scandinavica, 108(4), 304-309.</li>
@@ -14,7 +14,7 @@
 				<li>Timimi, S. (2014). No more psychiatric labels: Why formal psychiatric diagnostic systems should be abolished. International Journal of Clinical and Health Psychology, 14(3), 208-215.</li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>After the assessment process, each individual gets categorized and placed into a program shelter. While, in theory, assessments and placements into a program shelter should be individualized, we have learned that there are very low thresholds to place someone into mental health, substance abuse, or dual-diagnoses (MICA) shelters. For example, people who report seeking mental health services for anxiety, despite holding down a job, may be categorized as a “mental health client” and placed into a program shelter for people with high mental health needs, rather than in an employment shelter where there is further support around employment and independent living options. Similarly, a person who reports smoking marijuana one time per month would be placed into a substance abuse shelter. We have spoken with individuals who feel that they were inappropriately assigned to substance use or mental health shelters, which in turn has made it difficult to maintain sobriety and/or has exacerbated mental health symptoms.</p>
 			<p>We have many concerns with placing people into “categorized” shelters in which they don’t agree with. The type of shelter someone is placed into often determines what type of permanent housing options will be explored. People placed into mental health shelters will often be pushed towards supportive housing, even when they are not experiencing severe mental illness and may be better suited for independent housing through a city-subsidy with linkage to ongoing outpatient mental health treatment. We challenge the idea that anyone with a mental health diagnosis is most appropriate for permanent supportive housing rather than community settings, and believe the “one size fits all” approach of the current system is not beneficial in providing appropriate placements. Assignments to program shelters should take into account the person as a whole, and not just focus on diagnoses. Furthermore, labeling someone as “mentally ill” for the basis of placing them into shelter can be deeply stigmatizing.</p>
 		</div>
