--- a/moreStep2ov2.html
+++ b/moreStep2ov2.html
@@ -6,13 +6,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">Street homeless New Yorkers, sensing that outreach workers aren’t being upfront with them or feeling like they aren’t being treated as human beings, can often write off outreach workers and instead try to navigate the system without them (which is nearly impossible).</p>
 			<ul class="quotes">
 				<li>NYC Mayor's Office of Operations. (2017, November). NYC HOME-STAT Stakeholder research insights report: Documenting the journey from street to home January - May 2016. Retrieved July 27, 2018, from <a target="_blank" href="https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017">https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>Providers have said they are intentionally unclear on the “sightings” and eligibility process as they do not want outreach workers to make promises they cannot keep. For example, they do not want to tell people that if you are “sighted” three times and live on the streets for nine months then you will get a safe haven bed, because there may not be safe haven beds available after those nine months. Providers express that broken promises, perceived or real, can create immense strife and damage outreach-client relationships.</p>
 			<p>Like many steps in this process, it is easy to understand how well-intentioned people could reach that conclusion. However, in practice, the lack of transparency causes far more harm than good. Street homeless New Yorkers, sensing that outreach workers aren’t being upfront with them or feeling like they aren’t being treated as human beings, can often write off outreach workers and instead try to navigate the system without them (which is nearly impossible).</p>
 			<p>It is not just people experiencing street homelessness who are frustrated with the eligibility process and the requirements to access services. Providers recognize that there are limitations on the services they can offer due to the availability and capacity of certain services, like safe havens, and that their contracts dictate many of the services they can provide. This can limit client interactions to, “How are you? What is your name? What is your date of birth?” and only offering emergency services such as shelter, detox, or the emergency room.</p>
