--- a/moreStep2re5.html
+++ b/moreStep2re5.html
@@ -6,13 +6,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">[Street homeless New Yorkers] were attracted to the idea of a supportive peer in the arduous journey that comes with navigating the street-to-home process, and they said they would be more trusting that outreach workers want to help if they had that lived experience.</p>
 			<ul class="quotes">
 				<li>"Kryda, A. D., & Compton, M. T. (2009). Mistrust of outreach workers and lack of confidence in available services among individuals who are chronically street homeless. Community Mental Health Journal, 45(2), 144-150.</li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>We believe that the city’s contracted outreach teams should have budgets which include line-items for peers, in this case formerly homelessness people, to work as outreach workers. When asked “What would make a good outreach worker?”, many of our interviewees described workers who were more empathetic, had lived through the experience of homelessness, and knew what it was like to navigate the system. They were attracted to the idea of a supportive peer in the arduous journey that comes with navigating the street-to-home process, and they said they would be more trusting that outreach workers want to help if they had that lived experience.</p>
 			<p>Previous research from 2009 conducted in Midtown Manhattan emphasized that homeless individuals often have “mistrust of outreach workers” due to “lack of confidence in available services.” Additionally, people experiencing homelessness viewed the outreach workers as being incentivized by their paychecks more than anything else.</p>
 			<p>Our work, in addition to previous research, highlights a need for a Peer role within outreach programs. These roles should not be set up as “tokenizing,” and instead, Peers should be paid the same and work the same hours as their traditional outreach counterparts.</p>
