--- a/moreStep3ov1.html
+++ b/moreStep3ov1.html
@@ -6,7 +6,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">The requirement of homeless chronicity serves as an enormous barrier to obtaining transitional housing, specifically for Safe Havens.</p>
 			<ul class="quotes">
 				<li>See page 1 in Appendix B: Human Services Standard Contract between the City of New York’s Department of Homeless Services and the Center for Urban Community Services, Inc. (2017, July 31). Retrieved August 30, 2018, under a Freedom of Information Law request (FOIL #18-443) to the NYC Department of Social Services Freedom of Information Law Office.</li>
@@ -16,7 +16,7 @@
 				<li>Bowery Residents' Committee. (2018). Safe Haven. Retrieved August 24, 2018, from<a target="_blank" href="http://www.brc.org/safe-haven">http://www.brc.org/safe-haven</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>To be eligible for a Safe Haven, a person must meet, and provide a way to prove they meet, New York City’s definition for chronic homelessness, meaning they have been homeless for nine months out of the last two years. This provides a barrier to many people who have recently become homeless or left the shelter system, leading to a wait of at least nine months before becoming eligible for transitional housing.</p>
 			<p>In practice, we have found that people who are working with a case manager (see step 2) are often in limbo; people experiencing street homelessness want to move into transitional housing but have to wait for one of two things (sometimes both): 1) they become eligible or 2) a vacancy becomes available. As of July 2018, there are over 950 Safe Haven beds in use each night throughout the DHS system. Although the city has committed to opening more Safe Haven beds, outreach providers currently must still find ways to ration a scarce resource, which they do through waiting processes and prioritization based on vulnerability.</p>
 			<p>The requirement of homeless chronicity serves as an enormous barrier to obtaining transitional housing, specifically for Safe Havens. We have spoken to many people who do not yet meet these requirements but who are unable and unwilling to return to the DHS shelter system, citing many reasons why they choose to sleep on the streets rather than the shelter. Not meeting the chronicity requirement for a Safe Haven leaves individuals with no choice but to return to the shelter system, which puts people at risk for victimization of traumatic experiences, or to remain street homeless while working towards meeting a “chronically homeless” status. People are ineligible for Safe Haven placements if they have been in a shelter within the previous six months, making it difficult for individuals who cycle in and out of various settings--including shelters--to become eligible for more supportive services. Safe Haven beds are meant to be a lower-threshold shelter for those for whom the typical shelter does not work, including those who aren’t ready for sobriety or prefer the independence of the streets to the many rules of the shelter system. However, the current eligibility requirements do not allow for human-centered assessments of individual situations, requiring people to sleep on the streets and to “prove their homelessness” instead of placing them as soon as it is determined a Safe Haven would be an appropriate fit.</p>
