--- a/moreStep3ov2.html
+++ b/moreStep3ov2.html
@@ -6,13 +6,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">People who live on the streets for longer periods of time often adjust to life on the streets, develop routines, and therefore are less likely to move from their newfound community into somewhere new with people they don’t know.</p>
 			<ul class="quotes">
 				<li>Fairmount Ventures, Inc. (2011, January). Evaluation of Pathways to Housing PA. Retrieved from <a target="_blank" href="https://centercityphila.org/uploads/attachments/cit0g2r8x0029f6qdpgp9b8ja-pathways-to-housing.pdf">https://centercityphila.org/uploads/attachments/cit0g2r8x0029f6qdpgp9b8ja-pathways-to-housing.pdf</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>No one wants to live on the streets. Research has shown that street homeless folks who are falsely deemed “service resistant” will accept appropriate housing when it is offered. However, without sufficient housing available, the city is often only able to offer transitional housing or shelter.</p>
 			<p>People who live on the streets for longer periods of time often adjust to life on the streets, develop routines, and therefore are less likely to move from their newfound community into somewhere new with people they don’t know. This phenomenon hinders the city’s goal of moving people off the streets, but is enforced by its nine-month minimum homelessness requirement to accept housing.</p>
 			<p>Without sufficient and comfortable housing or shelter for people who become street homeless, the city will continue to drive chronic homelessness, the very thing it says it fights to end.</p>
