--- a/moreStep4ov2.html
+++ b/moreStep4ov2.html
@@ -6,13 +6,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">There are a finite number of Safe Haven beds available in New York City, and turnover in these beds are low, with the average length of stay over a year.</p>
 			<ul class="quotes">
 				<li>Leopold, J. (2014, February). Innovations in NYC Health & Human Services policy: Street homelessness and supportive housing. Retrieved from the Urban Institute website: <a target="_blank" href="https://www.urban.org/sites/default/files/publication/32661/413059-Innovations-in-NYC-Health-and-Human-Services-Policy-Street-Homelessness-and-Supportive-Housing.PDF">https://www.urban.org/sites/default/files/publication/32661/413059-Innovations-in-NYC-Health-and-Human-Services-Policy-Street-Homelessness-and-Supportive-Housing.PDF</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>Just because an individual is eligible, or prioritized, for a Safe Haven placement does not mean they will be immediately placed. There are a finite number of Safe Haven beds available in New York City, and turnover in these beds are low, with the average length of stay over a year. Furthermore, length of stay in these programs can be longer due to lack of permanent housing options for people to move into from the Safe Haven. These factors increase the length of time someone spends living on the streets waiting for a bed to open up. </p>
 			<p>In addition to the lack of vacancies, we have learned that there are new protocols in place which may increase the time it takes for eligible individuals to be placed into a Safe Haven. This new process requires that Safe Haven beds be filled within a certain amount of time after the bed becomes available; if the outreach team is unable to fill the bed within the specified time frame, the bed is then given to another outreach team. This process of rewarding outreach teams who are able to fill a bed the fastest is problematic: it does a disservice to clients who may take longer to be located and transported for placement, including those who have been waiting a long time for the bed. While it is understandable that DHS and Safe Haven providers do not want these beds to remain unfilled, it also puts pressure on outreach workers to offer placement to the individuals who are most likely to be placed quickly. This process does not take into account that people needing, wanting, and deserving of a place to sleep each night may not be immediately available for placement.</p>
 		</div>
