--- a/moreStep5ov3.html
+++ b/moreStep5ov3.html
@@ -6,13 +6,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">To apply for Cash Assistance, an applicant must be able to prove identity, age, residence, citizenship, and income, among other applicable criteria</p>
 			<ul class="quotes">
 				<li>NYC Mayor's Office of Operations. (2017, November). NYC HOME-STAT Stakeholder research insights report: Documenting the journey from street to home January - May 2016. Retrieved July 27, 2018, from <a target="_blank" href="https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017">https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>A prerequisite for permanent housing is an income. In New York City, this income can take the form of employment, but more frequently for individuals experiencing homelessness, it takes the form of Public Assistance or Social Security. One part of Public Assistance is Cash Assistance, which can be used just like cash to pay for everyday living expenses.</p> 
 			<p>The process of applying for Cash Assistance is usually long and requires upwards of 75 days and at least four meetings to complete. The applicant must attend every meeting (which may end up being in excess of six), and if they miss even one, they must begin the process over again. For applicants who live on the street, Cash Assistance is $264 per month, which is nearly six times as much as those living in a Safe Haven or a shelter. The reduction of benefits incurred after entering a Safe Haven can be a barrier to accessing Safe Havens or shelters, as we have heard from individuals who have chosen to remain on the streets: their Cash Assistance benefits give them a greater sense of security and safety than a bed does. If someone is unhappy with or skeptical about the conditions of a Safe Haven, the trade-off of reducing their Cash Assistance may lead them to opt to stay outside.</p>
 			<p>To apply for Cash Assistance, an applicant must be able to prove identity, age, residence, citizenship, and income, among other applicable criteria. A host of documents is required to prove these, including a photo ID and a birth certificate. </p>
