--- a/moreStep6re1.html
+++ b/moreStep6re1.html
@@ -6,7 +6,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlights medium">Per HUD’s description, “Everyone is ‘housing ready.’ Sobriety, compliance in treatment, or even criminal histories are not necessary to succeed in housing. Rather, homelessness programs and housing providers must be ‘consumer ready.’”</p>
 			<ul class="quotes">
 				<li>See page 1: U.S. Department of Housing and Urban Development. (2014, July). Housing First in permanent supportive housing brief. Retrieved from <a target="_blank" href="https://www.hudexchange.info/resources/documents/Housing-First-Permanent-Supportive-Housing-Brief.pdf">https://www.hudexchange.info/resources/documents/Housing-First-Permanent-Supportive-Housing-Brief.pdf</a></li>
@@ -14,7 +14,7 @@
 				<li>See page 1: U.S. Department of Housing and Urban Development. (2014, July). Housing First in permanent supportive housing brief. Retrieved from <a target="_blank" href="https://www.hudexchange.info/resources/documents/Housing-First-Permanent-Supportive-Housing-Brief.pdf">https://www.hudexchange.info/resources/documents/Housing-First-Permanent-Supportive-Housing-Brief.pdf</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>A core pillar of Housing First which is seldom applied in New York is to “quickly and successfully connect individuals and families experiencing homelessness to permanent housing without preconditions and barriers to entry, such as sobriety, treatment or service participation requirements. Supportive services are offered to maximize housing stability and prevent returns to homelessness as opposed to addressing predetermined treatment goals prior to permanent housing entry.” This methodology is crucial to the success of a Housing First program. If it were to be adapted in New York, it would eliminate supportive housing rejections for people who “lack insight into their mental illness” or who “need a higher level of care.” Instead, the units would be reserved for people who need them most.</p>
 			<p>This fundamental change should be reflected in outreach contracts. Currently, the Manhattan Outreach Consortium contract reads, “The Contractor shall use a ‘housing first’ approach wherever feasible. The Department recognizes placement into permanent housing as the best outcome for a Client. The Contractor shall assist each Client to move into permanent housing. If transitional steps are required (e.g., substance use treatment, Safe Havens, stabilization beds, emergency shelter), the Contractor shall continue to work with the Client to achieve permanent housing at the conclusion of the transitional steps until the Client is stable in permanent housing. The Department shall facilitate transitional placement linkages that support care coordination between outreach and the placement site.” In a true Housing First model, no transitional steps would be required, and the person would be provided with housing upon the determination that they are eligible for the program.</p>
 			<p>Cities that have implemented Housing First have proven that it is the most successful model for stably housing people with severe mental illnesses and/or substance abuse disorders. Per HUD’s description, “Everyone is ‘housing ready.’ Sobriety, compliance in treatment, or even criminal histories are not necessary to succeed in housing. Rather, homelessness programs and housing providers must be ‘consumer ready.’”</p>
