--- a/moreStep6re2.html
+++ b/moreStep6re2.html
@@ -6,10 +6,10 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlights medium">One important note is that the 90-day waiting period only begins when someone is on caseload. For street homeless clients, that typically means it would only begin after the completion of the “sightings process” described in Step 2.</p>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>Regarding voucher eligibility, Council Member Levin recommends removing the 90-day waiting period for eligible street homeless and sheltered applicants to receive a voucher. One important note is that the 90-day waiting period only begins when someone is on caseload. For street homeless clients, that typically means it would only begin after the completion of the “sightings process” described in Step 2. He adds that “street homeless clients should also be exempt from the rules requirement that individuals who are eligible must receive public assistance, as PA’s complex appointment and work requirements can be difficult to navigate and disincentivizes engagement in the program.” We recommend that CityFHEPS allow street homeless individuals to be approved for vouchers while they are in the application phase for Public Assistance (including pending statuses). We also recommend that the CityFHEPS recertification process be included within the PA recertification process in order to minimize HRA appointments and paperwork.</p>
 		</div>
 	</div>
