--- a/moreStep8ov1.html
+++ b/moreStep8ov1.html
@@ -6,13 +6,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">Even after a successful interview, application, and acceptance into a unit, there are often delays in actually moving into the housing.</p>
 			<ul class="quotes">
 				<li>NYC Human Resources Administration. (2018). Rental assistance: I am a landlord or broker. Retrieved December 17, 2018, from <a target="_blank" href="https://www1.nyc.gov/site/hra/help/landlords.page">https://www1.nyc.gov/site/hra/help/landlords.page</a></li>
 			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>Being approved for, or accepted into housing, does not guarantee a quick transition into permanent housing. Even after a successful interview, application, and acceptance into a unit, there are often delays in actually moving into the housing. For newly developed supportive housing units, interviews and offers of acceptance often occur before the certificate of occupancy (COO) is approved, and difficulties in getting the COO have been known to cause lengthy delays in opening buildings and, thus, moving people into housing. Additionally, when using city-funded vouchers there are often delays in obtaining security and rent checks from DHS/HRA and completing program-required housing inspections. These delays can result in landlords choosing to rent out their units to someone else without a voucher, so that they don’t lose months’ worth of rent payments keeping an empty apartment on hold. DHS has recognized this as a reason for landlords not continuing to move forward with apartments and has developed policies to mitigate these losses. For example, eligible landlords now receive signing bonuses of $4300, a unit hold incentive equivalent of one months rents to keep the unit vacant while paperwork is processing, and three to 11 months rent upfront.</p>
 		</div>
 	</div>
