--- a/contentStep1.html
+++ b/contentStep1.html
@@ -68,7 +68,7 @@
 				<div class="card-header" id="ov1Heading5">
 					<h5 class="mb-0">
 						<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#ov1Collapse5" aria-expanded="false" aria-controls="ov1Collapse5">
-							My dog is my home: People understandably won't give up their pets, which are not allowed in shelters
+							My Dog Is My Home: People understandably won't give up their pets, which are not allowed in shelters
 						</button>
 					</h5>
 				</div>
@@ -90,7 +90,7 @@
 				</div>
 				<div id="ov1Collapse6" class="collapse" aria-labelledby="ov1Heading6" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>People describe pets as members of their family, and choose to stay connected with their pets rather than give them up to live in a shelter. To access shelters and other resources (such as medical clinics, inpatient treatment, soup kitchens, etc.) they are told they must separate from their pet, a decision they may not choose, therefore leaving them few options but to remain unsheltered and untreated. </p>
+						<p>After the assessment process, each individual gets "categorized" and placed into a program shelter. While, in theory, assessments and placements into a program shelter should be individualized, we have learned that there are very low thresholds to place someone into mental health, substance abuse, or dual-diagnoses (MICA) shelters. For example, people who report seeking mental health services for anxiety, despite holding down a job, may be categorized as a “mental health client” and placed into a program shelter for people with high mental health needs, rather than in an employment shelter where there is further support around employment and independent living options. Similarly, a person who reports smoking marijuana one time per month would be placed into a substance abuse shelter.</p>
 						<p><button class="btn btn-link" onclick="readMore1('moreStep1ov6')">Read More</button></p>
 					</div>
 				</div>
@@ -101,7 +101,7 @@
 <div class="col-xs-12 col-md-4 col-lg-4">
 	<h3>Recommendations</h3>
 	<div class="scroll">
-		<p>Below, we have proposed a series of options for people who do not yet meet the 9-month chronicity requirement. The city should do everything in its power to avoid forcing folks to live outside for 9 months while waiting for placement.</p>
+		<p>Our recommendations seek to address the shelter conditions that drive street homelessness. While shelters are far from ideal, if people are willing to come inside under better conditions, addressing these issues will provide an opportunity to apply for permanent housing while living inside.</p>
 		<div class="accordion" id="accordionExample">
 			<div class="card">
 				<div class="card-header" id="re1Heading1">
