--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 					<li class="nav-item active">
-						<a class="nav-link" href="#step_one">Step 1 - Become Street Homeless</a>
+						<a class="nav-link" href="#step_one">Step 1 - Becoming Street Homeless</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#step_two">Step 2 - Sighting Process</a>
+						<a class="nav-link" href="#step_two">Step 2 - &quot;Sighting&quot; Process</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#step_three">Step 3 - 9 Months on street</a>
+						<a class="nav-link" href="#step_three">Step 3 - 9 Months on the Street</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#step_four">Step 4 - Safe Haven Assignment</a>
@@ -189,7 +189,7 @@
 									</div>
 									<div class="row">
 										<div class="col-12">
-											<h2>Become Street Homeless</h2>
+											<h2>Becoming Street Homeless</h2>
 											<p>Sleeping on the streets rather than the shelters is often a rational choice that people make</p>
 											<hr>
 										</div>
@@ -209,7 +209,7 @@
 									</div>
 									<div class="row">
 										<div class="col-12">
-											<h2>&quot;Sighting Process&quot;</h2>
+											<h2>&quot;Sighting&quot; Process</h2>
 											<p>NYC mandates people be "sighted" three times, in their sleep spot, at random, before being offered a case manager</p>
 											<hr>
 										</div>
@@ -229,7 +229,7 @@
 									</div>
 									<div class="row">
 										<div class="col-12">
-											<h2>9 Months on the street</h2>
+											<h2>9 Months on the Street</h2>
 											<p>NYC mandates people live outside for nine months before they can be placed into transitional or permanent housing</p>
 											<hr>
 										</div>
