copy updates on timeline

--- a/index.html
+++ b/index.html
@@ -122,20 +122,20 @@
 											</a>
 											<g transform="translate(189 -45)"><!-- replace with your target upper left corner coordinates -->
 												<text class="graphText" x="0" y="0" fill="#707070">
-													<tspan x="0" dy="1.2em">BECOME STREET</tspan>
+													<tspan x="0" dy="1.2em">BECOMING STREET</tspan>
 													<tspan x="0" dy="1.2em">HOMELESS</tspan>
 												</text>
 											</g>
 											<g transform="translate(490 -30)"><!-- replace with your target upper left corner coordinates -->
 												<text class="graphText" x="0" y="0" fill="#707070">
-													<tspan x="0" dy="1.2em">SIGHTING</tspan>
+													<tspan x="0" dy="1.2em">&quot;SIGHTING&quot;</tspan>
 													<tspan x="0" dy="1.2em">PROCESS</tspan>
 												</text>
 											</g>
 											<g transform="translate(550 65)"><!-- replace with your target upper left corner coordinates -->
 												<text class="graphText" x="0" y="0" fill="#707070">
-													<tspan x="0" dy="1.2em">9 MONTHS</tspan>
-													<tspan x="0" dy="1.2em">ON STREET</tspan>
+													<tspan x="0" dy="1.2em">9 MONTHS ON</tspan>
+													<tspan x="0" dy="1.2em">THE STREET</tspan>
 												</text>
 											</g>
 											<g transform="translate(210 185)"><!-- replace with your target upper left corner coordinates -->
